objects/copado__Project__c.object
<CustomObject>
    <fields>
        <fullName>Copado_Integration_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Copado Integration Setting</label>
        <referenceTo>Copado_Integration_Setting__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_External_Id__c</fullName>
        <label>Project External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_Id__c</fullName>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>